Refactor ProductSearchService with conditional implementations